--- a/styles.css
+++ b/styles.css
@@ -14,20 +14,70 @@ header {
 body {
   background: #212733;
   color: white;
+  font-family: 'PT Sans', sans-serif;
 }
 
 .main-header {
   color: #212733;
-  font-family: 'PT Sans', sans-serif;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .info {
-  text-align: center;
   font-size: 30px;
-  font-family: 'PT Sans', sans-serif;
   padding: 20px 0px;
 }
 
-.info p {
+#score-display {
+  text-align: center;
+  font-size: 25px;
+  padding-bottom: 20px;
+}
+
+.game-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.how-to-play {
+  text-align: center;
+  font-size: 20px;
+  max-width: 500px;
+  padding: 30px;
+}
+
+#game {
+  border: 7px solid #FFA283;
+  border-radius: 5px;
+  background: #F4F2F0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-row {
+  display: flex;
+  background: #F4f2f0;
+}
+
+.tile {
+  background: #BBBBBB;
+  border-radius: 5px;
+  color: white;
+  width: 90px;
+  height: 90px;
+  margin: 5px;
+  font-size: 25px;
+  display: grid;
+  box-shadow: 3px 3px #999;
+}
+
+.value {
+  margin: auto;
 }
 
