--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,7 @@ body {
   height:         438px;
   position:       relative;
   padding:        4px;
+  display:        grid;
 }
 
 @keyframes popIn {
@@ -102,7 +103,6 @@ body {
   width:         90px;
   height:        90px;
   font-size:     25px;
-  margin:        7px;
   display:       grid;
   box-shadow:    3px 3px #999;
   position:      absolute;
@@ -113,6 +113,9 @@ body {
 .ghost-container {
   position: absolute;
   display: grid;
+  width: 100%;
+  margin: 7px; /* Tile area margin */
+  height: 100%;
   grid-template-columns: 25% 25% 25% 25%;
 }
 
@@ -122,7 +125,6 @@ body {
   color:         white;
   width:         90px;
   height:        90px;
-  margin:        7px;
   display:       grid;
 }
 
@@ -130,4 +132,25 @@ body {
   margin: auto;
 }
 
+@keyframes fadein {
+  0% { opacity: 0; }
+  100% { opacity: 0.8; }
+}
 
+.splash {
+  background: snow;
+  color: #212121;
+  margin: auto;
+  opacity: 0.8;
+  width: 100%;
+  height: 100%;
+  display: grid;
+
+  animation-name: fadein;
+  animation-duration: 0.5s;
+}
+
+.splash-text {
+  margin: auto;
+  font-size: 60px;
+}
