--- a/src/styles.css
+++ b/src/styles.css
@@ -137,7 +137,7 @@ body {
   100% { opacity: 0.8; }
 }
 
-.splash {
+.menu {
   background: snow;
   color: #212121;
   margin: auto;
@@ -150,7 +150,7 @@ body {
   animation-duration: 0.5s;
 }
 
-.splash-text {
+.menu-text {
   margin: auto;
   font-size: 60px;
 }
