--- a/src/styles.css
+++ b/src/styles.css
@@ -151,6 +151,17 @@ body {
 }
 
 .menu-text {
-  margin: auto;
+  margin: 0px auto;
   font-size: 60px;
+}
+
+.menu-button {
+  background: #cccccc;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 25px;
+  padding: 20px 50px;
+  margin: 50px auto 0px auto;
 }
