--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans');
+
  * {
   padding:    0px;
   margin:     0px;
@@ -48,6 +49,23 @@ body {
   padding: 10px;
 }
 
+#high-scores {
+  background: #F1F1F1;
+  border: 5px solid #FFA283;
+  border-radius: 5px;
+  padding: 0px 0px 0px 20px;
+  margin: 0px 0px 0px 20px;
+  color: #000000;
+}
+
+.hs-list {
+  padding: 10px;
+}
+
+.item {
+  padding: 10px;
+}
+
 #score {
   text-align:center;
 }
@@ -89,6 +107,10 @@ body {
   position:       relative;
   padding:        4px;
   display:        grid;
+}
+
+.flex {
+  display: flex;
 }
 
 @keyframes popIn {
